Some tidy up in StackValidationTests