@@ -9,7 +9,7 @@ import static org.assertj.core.api.Assertions.*;
 
 class StackValidationTests {
 
-	class ImmutableStack {
+	static class ImmutableStack {
 
 		private final List<Integer> elements;
 
@@ -23,7 +23,7 @@ class StackValidationTests {
 
 		public ImmutableStack push(int value) {
 			List<Integer> newElements = new LinkedList<>(elements);
-			newElements.add(0, value);
+			newElements.addFirst(value);
 			return new ImmutableStack(newElements);
 		}
 
@@ -32,7 +32,7 @@ class StackValidationTests {
 				throw new IllegalStateException("Cannot pop from an empty stack");
 			}
 			List<Integer> newElements = new LinkedList<>(elements);
-			newElements.remove(0);
+			newElements.removeFirst();
 			return new ImmutableStack(newElements);
 		}
 
@@ -40,7 +40,7 @@ class StackValidationTests {
 			if (elements.isEmpty()) {
 				throw new IllegalStateException("Stack is empty");
 			}
-			return elements.get(0);
+			return elements.getFirst();
 		}
 
 		public boolean isEmpty() {
@@ -49,6 +49,11 @@ class StackValidationTests {
 
 		public int size() {
 			return elements.size();
+		}
+
+		@Override
+		public String toString() {
+			return elements.toString();
 		}
 	}
 
@@ -59,6 +64,29 @@ class StackValidationTests {
 		ltl = new LTL<>();
 		ltl.addFormula(stackIsInitiallyEmpty());
 		ltl.addFormula(stackSizeAlwaysBetween0and2());
+		ltl.addFormula(isEmptyIsEquivalentToSizeIs0());
+		ltl.addFormula(everyTopCanBePopped());
+	}
+
+	private LTLFormula<ImmutableStack> everyTopCanBePopped() {
+		LTLFormula.Fact<ImmutableStack> isNotEmpty = stack -> !stack.isEmpty();
+		LTLFormula.Fact<ImmutableStack> topCanBePopped = stack -> {
+			int previousSize = stack.size();
+			int top = stack.top();
+			var newStack = stack.pop();
+			return newStack.size() == previousSize - 1;
+		};
+		return LTLFormula.always(
+			isNotEmpty.implies(topCanBePopped)
+		);
+	}
+
+	private LTLFormula<ImmutableStack> isEmptyIsEquivalentToSizeIs0() {
+		LTLFormula.Fact<ImmutableStack> isEmpty = stack -> stack.isEmpty();
+		LTLFormula.Fact<ImmutableStack> sizeIs0 = stack -> stack.size() == 0;
+		return LTLFormula.always(
+			isEmpty.implies(sizeIs0).and(sizeIs0.implies(isEmpty))
+		);
 	}
 
 	private LTLFormula<ImmutableStack> stackSizeAlwaysBetween0and2() {
@@ -80,29 +108,30 @@ class StackValidationTests {
 		))).isTrue();
 
 		assertThat(ltl.matches(LTLTrace.of(
-			new ImmutableStack().push(1)
+			new ImmutableStack().push(1).push(2)
 		))).isFalse();
 	}
 
 	@Example
 	void alwaysMatching() {
-		assertThat(ltl.matches(LTLTrace.of(
-			new ImmutableStack(),
-			new ImmutableStack().push(1),
-			new ImmutableStack().push(1).pop()
-		))).isTrue();
+		assertThat(ltl.matches(
+			LTLTrace.with(new ImmutableStack())
+					.next(s -> s.push(1))
+					.next(s -> s.push(2))
+					.next(s -> s.pop())
+		)).isTrue();
 
-		assertThat(ltl.matches(LTLTrace.of(
-			new ImmutableStack(),
-			new ImmutableStack().push(1),
-			new ImmutableStack().push(1).push(2)
-		))).isTrue();
+		assertThat(ltl.matches(
+			LTLTrace.with(new ImmutableStack())
+					.next(s -> s.push(1))
+					.next(s -> s.push(2))
+		)).isTrue();
 
-		assertThat(ltl.matches(LTLTrace.of(
-			new ImmutableStack(),
-			new ImmutableStack().push(1),
-			new ImmutableStack().push(1).push(2),
-			new ImmutableStack().push(1).push(2).push(3)
-		))).isFalse();
+		assertThat(ltl.matches(
+			LTLTrace.with(new ImmutableStack())
+					.next(s -> s.push(1))
+					.next(s -> s.push(2))
+					.next(s -> s.push(3))
+		)).isFalse();
 	}
 }
